-- Migration 2: Core Tables
-- This migration creates the foundational tables for restaurants, users, and user roles

-- Create restaurants table
CREATE TABLE restaurants (
    restaurant_id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    name VARCHAR(255) NOT NULL,
    address TEXT NOT NULL,
    phone VARCHAR(20),
    email VARCHAR(255),
    description TEXT,
    image_url TEXT,
    operating_hours TEXT,
    timezone VARCHAR(50) DEFAULT 'GMT',
    tax_rate DECIMAL(5,4) DEFAULT 0.00,
    service_charge DECIMAL(5,4) DEFAULT 0.00,
    currency VARCHAR(3) DEFAULT 'NPR',
    is_active BOOLEAN DEFAULT true,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

-- Create users table
CREATE TABLE users (
    user_id UUID PRIMARY KEY REFERENCES auth.users(id) ON DELETE CASCADE,
    name VARCHAR(255),
    profile_picture TEXT,
    phone VARCHAR(20),
    is_active BOOLEAN DEFAULT true,
    last_login TIMESTAMPTZ,
    created_at TIMESTAMPTZ DEFAULT NOW(),
    updated_at TIMESTAMPTZ DEFAULT NOW()
);

-- Create user_roles table
CREATE TABLE user_roles (
    user_role_id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
    user_id UUID REFERENCES users(user_id) ON DELETE CASCADE UNIQUE,
    restaurant_id UUID REFERENCES restaurants(restaurant_id) ON DELETE CASCADE,
    role roles_enum NOT NULL,
    is_active BOOLEAN DEFAULT true,
    assigned_at TIMESTAMPTZ DEFAULT NOW(),
    expires_at TIMESTAMPTZ,
    assigned_by UUID REFERENCES users(user_id)
);

-- Create indexes for core tables
CREATE INDEX idx_restaurants_is_active ON restaurants(is_active);

CREATE INDEX idx_users_is_active ON users(is_active);

CREATE INDEX idx_user_roles_restaurant_id ON user_roles(restaurant_id);
CREATE INDEX idx_user_roles_is_active ON user_roles(is_active);


-- Create updated_at trigger function
CREATE OR REPLACE FUNCTION update_updated_at_column()
RETURNS TRIGGER AS $$
BEGIN
    NEW.updated_at = NOW();
    RETURN NEW;
END;
$$ language 'plpgsql';

-- Apply updated_at triggers to core tables
CREATE TRIGGER update_restaurants_updated_at BEFORE UPDATE ON restaurants FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
CREATE TRIGGER update_users_updated_at BEFORE UPDATE ON users FOR EACH ROW EXECUTE FUNCTION update_updated_at_column(); 
