erDiagram
    users {
        string user_id PK
        string name
        string phone
        string profile_picture
        boolean is_active
        timestamp last_login
        timestamp created_at
        timestamp updated_at
    }

    restaurants {
        string restaurant_id PK
        string name
        string address
        string phone
        string email
        string description
        string image_url
        string operating_hours
        string currency
        float tax_rate
        float service_charge
        string timezone
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    user_roles {
        string user_role_id PK
        string user_id FK
        string restaurant_id FK
        roles_enum role
        boolean is_active
        timestamp assigned_at
        string assigned_by FK
        timestamp expires_at
    }

    tables {
        string table_id PK
        string restaurant_id FK
        string table_number
        integer capacity
        table_status status
        string qr_code_data
        string qr_code_url
        timestamp last_scanned
        json location_coordinates
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    menu_categories {
        string category_id PK
        string restaurant_id FK
        string name
        string description
        string image_url
        integer sort_order
        boolean is_active
        time available_from
        time available_until
        timestamp created_at
        timestamp updated_at
    }

    menu_items {
        string item_id PK
        string restaurant_id FK
        string name
        string description
        float price
        string image_url
        string ingredients
        string allergens
        integer preparation_time
        boolean is_available
        boolean is_featured
        json customization_options
        timestamp created_at
        timestamp updated_at
    }

    menu_item_categories {
        string menu_item_id PK, FK
        string category_id PK, FK
    }

    diet_type {
        string diet_type_id PK
        string restaurant_id FK
        string name
    }

    menu_item_diet_types {
        string menu_item_id PK, FK
        string diet_type_id PK, FK
    }

    orders {
        string order_id PK
        string restaurant_id FK
        string customer_id FK
        string table_id FK
        string order_number
        order_status status
        float subtotal
        float tax_amount
        float service_charge
        float total_amount
        string special_instructions
        string processed_by FK
        timestamp order_time
        timestamp created_at
        timestamp updated_at
        timestamp accepted_at
        timestamp ready_at
        timestamp served_at
        timestamp cancelled_at
        timestamp cancellation_deadline
        integer estimated_prep_time
        integer actual_prep_time
        integer max_prep_time
        timestamp kitchen_cutoff_time
        float calculated_total
        boolean is_total_validated
    }

    order_items {
        string order_item_id PK
        string order_id FK
        string item_id FK
        integer quantity
        float unit_price
        float total_price
        json customizations
        order_item_status status
        timestamp created_at
        timestamp updated_at
    }

    order_status_history {
        string history_id PK
        string order_id FK
        order_status old_status
        order_status new_status
        string updated_by FK
        string notes
        timestamp updated_at
        integer estimated_time
        boolean is_valid_progression
        string validation_errors
    }

    order_payments {
        string payment_id PK
        string order_id FK
        float amount_paid
        payment_method payment_method
        payment_status payment_status
        string payment_reference
        string processed_by FK
        timestamp payment_time
        float change_given
        timestamp created_at
        timestamp updated_at
    }

    notifications {
        string notification_id PK
        string user_id FK
        string order_id FK
        string restaurant_id FK
        notification_type type
        string title
        string message
        notification_priority priority
        boolean is_read
        timestamp sent_at
        timestamp read_at
        timestamp expires_at
        json metadata
        timestamp created_at
    }

    qr_scans {
        string scan_id PK
        string table_id FK
        string customer_id FK
        string order_id FK
        string session_id
        timestamp scanned_at
        timestamp expires_at
        ip_address ip_address
        string user_agent
        json device_info
        string referrer_url
        boolean led_to_order
        boolean is_active_session
        session_status session_status
    }

    promotions {
        string promotion_id PK
        string restaurant_id FK
        string name
        string description
        string type
        float value
        timestamp start_date
        timestamp end_date
        boolean is_active
        string voucher_code
    }

    promotion_categories {
        string promotion_id PK, FK
        string category_id PK, FK
    }

    applied_promotions {
        string applied_promotion_id PK
        string order_id FK
        string promotion_id FK
        float discount_amount
    }

    carts {
        string id PK
        string user_id
        string session_id
        string restaurant_id FK
        timestamp created_at
        timestamp updated_at
    }

    cart_items {
        string id PK
        string cart_id FK
        string menu_item_id FK
        integer quantity
        float price_at_time_of_addition
        timestamp created_at
        timestamp updated_at
    }

    users ||--o{ user_roles : "has"
    restaurants ||--o{ user_roles : "has"
    users ||--o{ orders : "places"
    restaurants ||--o{ orders : "receives"
    tables ||--o{ orders : "for"
    orders ||--o{ order_items : "contains"
    menu_items ||--o{ order_items : "details"
    orders ||--o{ order_status_history : "has"
    users ||--o{ order_status_history : "updated by"
    orders ||--o{ order_payments : "has"
    users ||--o{ order_payments : "processed by"
    users ||--o{ notifications : "receives"
    orders ||--o{ notifications : "triggers"
    restaurants ||--o{ notifications : "sends"
    tables ||--o{ qr_scans : "has"
    users ||--o{ qr_scans : "performs"
    orders ||--o{ qr_scans : "leads to"
    restaurants ||--o{ tables : "has"
    restaurants ||--o{ menu_categories : "has"
    restaurants ||--o{ menu_items : "has"
    menu_categories ||--|{ menu_item_categories : "groups"
    menu_items ||--|{ menu_item_categories : "belongs to"
    menu_items ||--|{ menu_item_diet_types : "has"
    diet_type ||--|{ menu_item_diet_types : "classifies"
    restaurants ||--o{ diet_type : "defines"
    restaurants ||--o{ promotions : "offers"
    promotions ||--|{ promotion_categories : "applies to"
    menu_categories ||--|{ promotion_categories : "targeted by"
    orders ||--o{ applied_promotions : "uses"
    promotions ||--o{ applied_promotions : "tracks"
    carts ||--o{ cart_items : "contains"
    menu_items ||--o{ cart_items : "details"
    restaurants ||--o{ carts : "has"
    user_roles }|--|| users : "assigned to"
    user_roles }|--|| restaurants : "for"
    user_roles }o--|| users : "assigned by"
    orders }|--o| users : "placed by"
    orders }|--|| restaurants : "for"
    orders }|--o| tables : "at"
    order_items }|--|| orders : "part of"
    order_items }|--|| menu_items : "is"
    order_status_history }|--|| orders : "tracks"
    order_status_history }o--|| users : "updated by"
    order_payments }|--|| orders : "for"
    order_payments }o--|| users : "processed by"
    notifications }o--|| users : "for"
    notifications }o--|| orders : "about"
    notifications }o--|| restaurants : "from"
    qr_scans }|--|| tables : "for"
    qr_scans }o--|| users : "by"
    qr_scans }o--o| orders : "resulted in"
    tables }|--|| restaurants : "in"
    menu_categories }|--|| restaurants : "of"
    menu_items }|--|| restaurants : "of"
    menu_item_categories }|--|| menu_items : "of"
    menu_item_categories }|--|| menu_categories : "in"
    menu_item_diet_types }|--|| menu_items : "of"
    menu_item_diet_types }|--|| diet_type : "is"
    diet_type }o--|| restaurants : "defined by"
    promotions }|--|| restaurants : "of"
    promotion_categories }|--|| promotions : "of"
    promotion_categories }|--|| menu_categories : "for"
    applied_promotions }|--|| orders : "on"
    applied_promotions }|--|| promotions : "of"
    cart_items }|--|| carts : "in"
    cart_items }|--|| menu_items : "of"
    carts }|--|| restaurants : "for"
